# BI_Compras

./: .gitignore  pyproject.toml  readme.md
data/: compras_dataset.csv
power_bi/: Compras.pbip
power_bi/Compras.Report/: .platform  definition.pbir
power_bi/Compras.Report/StaticResources/RegisteredResources/: Custom4426592223541841.json
power_bi/Compras.Report/definition/: report.json
power_bi/Compras.Report/definition/pages/: pages.json
power_bi/Compras.Report/definition/pages/4666fc598de2321dd33a/: page.json
power_bi/Compras.Report/definition/pages/4666fc598de2321dd33a/visuals/1b7c375adc66ae6c54e2/: visual.json
power_bi/Compras.Report/definition/pages/4c9eb18456a83634c830/: page.json
power_bi/Compras.Report/definition/pages/65ee6a9a0d90ae449070/: page.json
power_bi/Compras.Report/definition/pages/f6d5517e4ec8854a8d12/: page.json
power_bi/Compras.SemanticModel/: .platform  diagramLayout.json
power_bi/Compras.SemanticModel/.pbi/: cache.abf
power_bi/Compras.SemanticModel/definition/: model.tmdl  relationships.tmdl
power_bi/Compras.SemanticModel/definition/cultures/: en-US.tmdl
power_bi/Compras.SemanticModel/definition/tables/: DateTableTemplate_5de93bbb-6737-4849-bce2-c297401e60e0.tmdl  LocalDateTable_73ceaa47-845b-46f5-8f09-d5d4d7d5aef3.tmdl  LocalDateTable_83f0af8b-4025-4cdf-89e7-7185b7b299d9.tmdl  LocalDateTable_e5510198-e9f8-4efc-bc28-22f9be856b8f.tmdl  Medidas.tmdl  dCalendario.tmdl  dFornecedor.tmdl  dProduto.tmdl  fCompras.tmdl
scripts/: audit_data.py  extract_load.py
(+64 files in other folders)
