[project]
name = "bi-compras"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano Magalhães",email = "lucianoamaro.m@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.13,<0.15.0)"
]

[tool.ruff]
# Comprimento máximo da linha (padrão de mercado é 88 ou 120)
line-length = 88

[tool.ruff.lint]
# Regras que vamos ativar:
# E: Erros de estilo (pycodestyle)
# F: Falhas lógicas (Pyflakes)
# I: Ordenação de imports (Isort) - Isso é vida!
select = ["E", "F", "I"]

[tool.ruff.format]
# Usa aspas duplas (padrão do Black)
quote-style = "double"